# vidi18n

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  mkdocs.yml
experiment/: dl.sh  extract_frames.py  hsetter.py
experiment/testdata/: source.txt
experiment/video/: cache.py  detect_text.py  frame_extractor.py  ocr.py
experiment/yt-dlp/: archive.org.json  index.mpd.j2  info.txt  youtube.com.json
python/: Dockerfile  README.md  extract_deps.py  pyproject.toml
python/src/vidi18n/: __main__.py
python/src/vidi18n/common/: cache.py  file.py  redis.py  time.py
python/src/vidi18n/schemas/: base.py  chunk.py  file.py  video.py
python/src/vidi18n/services/: __init__.py
python/src/vidi18n/services/download/: __main__.py  listeners.py  yt_dl.py
python/src/vidi18n/services/manager/: __init__.py  __main__.py  app.py  listeners.py  router.py  routes.py  schemas.py
python/src/vidi18n/services/manager/routes/: file.py  video.py
python/tests/: test_fail.py
python/tests/common/time/: test_timedelta_ti_iso8601.py
web/conf/: default.conf
web/wwwroot/: index.html
